Linked the ActivityTypes emum to the ActivityTypesController so that a list of activity strings are retreived by the front end.  #story[325]