@@ -1,28 +1,18 @@
 package com.springvuegradle.seng302team600.controller;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
 import com.springvuegradle.seng302team600.service.UserValidationService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
+import com.springvuegradle.seng302team600.model.ActivityTypes;
 
-import java.util.List;
+import java.util.*;
 
 /**
  * Controller to manage activities and activity type
  */
 @RestController
 public class ActivityController {
-
-
-    //******* Place holder for ActivityType Enum - remove when implemented ********
-    public enum ActivityType {
-        @JsonProperty("Swimming with Elephants")
-        SWIMMING_WITH_ELEPHANTS,
-        @JsonProperty("Running")
-        RUNNING
-    }
-    //******************************************************************************
 
     @Autowired
     private UserValidationService userService;
@@ -36,8 +26,17 @@ public class ActivityController {
      * @return list of activity types
      */
     @GetMapping("activity-types")
-    public List<ActivityType> getAllActivityTypes() {
-        return List.of(ActivityType.values());
+    public List<ActivityTypes> getAllActivityTypes() {
+        List<ActivityTypes> activityTypes = Arrays.asList(ActivityTypes.values());
+
+        // Sorts the list of Enums
+        Collections.sort(activityTypes, new Comparator<ActivityTypes>() {
+            @Override
+            public int compare(ActivityTypes o1, ActivityTypes o2) {
+                return o1.getHumanReadable().toLowerCase().compareTo(o2.getHumanReadable().toLowerCase());
+            }
+        });
+        return activityTypes;
     }
 
 }
